@@ -54,13 +54,6 @@ public class EcrReportCreator extends ReportCreator {
   private static final String EICR_INITIATION_TYPE_EXT_URL =
       "http://hl7.org/fhir/us/ecr/StructureDefinition/eicr-initiation-type-extension";
 
-  // FIX 1: These two live in us/ph-library, not us/ecr
-  private static final String US_PH_INITIATION_REASON_EXT_URL =
-      "http://hl7.org/fhir/us/ph-library/StructureDefinition/us-ph-initiation-reason-extension";
-
-  private static final String US_PH_INFO_RECIPIENT_EXT_URL =
-      "http://hl7.org/fhir/us/ph-library/StructureDefinition/us-ph-information-recipient-extension";
-
   private static final String DEVICE_NAME = "eCRNow/Backend Service App";
   private static final String TRIGGER_CODE_EXT_URL =
       "http://hl7.org/fhir/us/ecr/StructureDefinition/eicr-trigger-code-flag-extension";
@@ -83,6 +76,8 @@ public class EcrReportCreator extends ReportCreator {
   public static final String MESSAGE_HEADER_PROFILE = "";
   public static final String MESSAGE_TYPE_URL =
       "http://hl7.org/fhir/us/ecr/CodeSystem/us-ph-message-types-codesystem";
+  private static final String ADDRESS_MEDICATION_REFERENCES_FUTURE =
+      " Address Medication References in future ";
   public static final String NAMED_EVENT_URL =
       "http://hl7.org/fhir/us/ecr/CodeSystem/us-ph-triggerdefinition-namedevents";
 
@@ -113,8 +108,7 @@ public class EcrReportCreator extends ReportCreator {
 
       logger.info(" Creating a FHIR Eicr Report ");
       reportingBundle = createReportingBundle(profile);
-      Bundle contentBundle =
-          getFhirReport(kd, ehrService, dataRequirementId, EICR_DOCUMENT_BUNDLE, act);
+      Bundle contentBundle = getFhirReport(kd, dataRequirementId, EICR_DOCUMENT_BUNDLE, act);
       MessageHeader mh = createMessageHeader(kd, false, contentBundle);
 
       BundleEntryComponent messageComponent = new BundleEntryComponent();
@@ -141,7 +135,7 @@ public class EcrReportCreator extends ReportCreator {
 
       logger.info(" Creating a CDA R11 Eicr Report ");
       reportingBundle = createReportingBundle(profile);
-      Bundle contentBundle = getCdaR11Report(kd, ehrService, dataRequirementId, profile, act);
+      Bundle contentBundle = getCdaR11Report(kd, dataRequirementId, profile, act);
       MessageHeader mh = createMessageHeader(kd, true, contentBundle);
 
       BundleEntryComponent bec = new BundleEntryComponent();
@@ -179,8 +173,8 @@ public class EcrReportCreator extends ReportCreator {
 
       logger.info(" Creating an Eicr for each of the above formats ");
       reportingBundle = createReportingBundle(profile);
-      Bundle contentBundle1 = getCdaR11Report(kd, ehrService, dataRequirementId, profile, act);
-      Bundle contentBundle2 = getFhirReport(kd, ehrService, dataRequirementId, profile, act);
+      Bundle contentBundle1 = getCdaR11Report(kd, dataRequirementId, profile, act);
+      Bundle contentBundle2 = getFhirReport(kd, dataRequirementId, profile, act);
       Bundle contentBundle3 = getCdaR31Report(kd, ehrService, dataRequirementId, profile, act);
       MessageHeader mh = createMessageHeader(kd, true, contentBundle1);
 
@@ -278,11 +272,7 @@ public class EcrReportCreator extends ReportCreator {
   }
 
   public Bundle getCdaR11Report(
-      KarProcessingData kd,
-      EhrQueryService ehrService,
-      String dataRequirementId,
-      String profile,
-      BsaAction act) {
+      KarProcessingData kd, String dataRequirementId, String profile, BsaAction act) {
 
     Bundle returnBundle = new Bundle();
     returnBundle.setId(UUID.randomUUID().toString());
@@ -434,8 +424,7 @@ public class EcrReportCreator extends ReportCreator {
   // FIX 12: getFhirReport — bundle profile fallback, identifier urn: prefix,
   //         dedupe entries by fullUrl
   // ==========================================================================
-  public Bundle getFhirReport(
-      KarProcessingData kd, EhrQueryService ehrService, String id, String profile, BsaAction act) {
+  public Bundle getFhirReport(KarProcessingData kd, String id, String profile, BsaAction act) {
 
     Bundle returnBundle = new Bundle();
     returnBundle.setId(id);
@@ -523,51 +512,67 @@ public class EcrReportCreator extends ReportCreator {
             FhirGeneratorConstants.ECR_COMP_TYPE_CODE_DISPLAY));
 
     // Subject
-    Set<Resource> patients = kd.getResourcesByType(ResourceType.Patient.toString());
-    if (patients != null && !patients.isEmpty()) {
-      logger.info(" Setting up the patient for the composition ");
-      Resource patient = patients.iterator().next();
-      Reference patReference = new Reference();
-
-      String reference = ResourceType.Patient + "/" + patient.getIdElement().getIdPart();
-      patReference.setReference(reference);
-      comp.setSubject(patReference);
-      resTobeAdded.add(patient);
-
-    } else {
-
-      logger.error(
-          " Cannot setup the patient for Composition, need to determine best approach to deal with the error. ");
-    }
+    setupSubject(comp, kd, resTobeAdded);
 
     // Encounter
-    Set<Resource> encounters = kd.getResourcesByType(ResourceType.Encounter.toString());
-    if (encounters != null && !encounters.isEmpty() && encounters.size() == 1) {
-      logger.info(" Setting up the encounter for the composition ");
-      Reference encounterRef = new Reference();
-      Resource encounter = encounters.iterator().next();
-      String reference = ResourceType.Encounter + "/" + encounter.getIdElement().getIdPart();
-      encounterRef.setReference(reference);
-      comp.setEncounter(encounterRef);
-      resTobeAdded.add(encounter);
-    } else if (encounters != null && !encounters.isEmpty() && encounters.size() > 1) {
-      logger.error(
-          "Received more than one encounter for processing which is erroneous, using the first one.");
-      comp.getEncounter().setResource(encounters.iterator().next());
-    }
+    setupEncounter(comp, kd, resTobeAdded);
 
-    // Date
     comp.setDate(Date.from(Instant.now()));
 
-    // FIX 9: Author — fall back to Device when no Practitioner available
     List<Practitioner> practs = addAuthors(kd, comp);
     if (practs != null && !practs.isEmpty()) {
       resTobeAdded.addAll(practs);
     }
 
-    // Title
     comp.setTitle(EICR_REPORT_LOINC_CODE_DISPLAY_NAME);
+    setupCustodian(comp, kd, resTobeAdded);
 
+    List<SectionComponent> scs = createSections(kd, data, resTobeAdded);
+    comp.setSection(scs);
+
+    populateSectionNarratives(scs);
+
+    addLocationResources(kd, resTobeAdded);
+
+    return comp;
+  }
+
+  private void setupSubject(Composition comp, KarProcessingData kd, Set<Resource> resTobeAdded) {
+    Set<Resource> patients = kd.getResourcesByType(ResourceType.Patient.toString());
+    if (patients == null || patients.isEmpty()) {
+      logger.error(
+          " Cannot setup the patient for Composition, need to determine best approach to deal with the error. ");
+      return;
+    }
+    logger.info(" Setting up the patient for the composition ");
+    Resource patient = patients.iterator().next();
+    Reference patReference = new Reference();
+    patReference.setReference(ResourceType.Patient + "/" + patient.getIdElement().getIdPart());
+    comp.setSubject(patReference);
+    resTobeAdded.add(patient);
+  }
+
+  private void setupEncounter(Composition comp, KarProcessingData kd, Set<Resource> resTobeAdded) {
+    Set<Resource> encounters = kd.getResourcesByType(ResourceType.Encounter.toString());
+    if (encounters == null || encounters.isEmpty()) {
+      return;
+    }
+    if (encounters.size() == 1) {
+      logger.info(" Setting up the encounter for the composition ");
+      Resource encounter = encounters.iterator().next();
+      Reference encounterRef = new Reference();
+      encounterRef.setReference(
+          ResourceType.Encounter + "/" + encounter.getIdElement().getIdPart());
+      comp.setEncounter(encounterRef);
+      resTobeAdded.add(encounter);
+    } else {
+      logger.error(
+          "Received more than one encounter for processing which is erroneous, using the first one.");
+      comp.getEncounter().setResource(encounters.iterator().next());
+    }
+  }
+
+  private void setupCustodian(Composition comp, KarProcessingData kd, Set<Resource> resTobeAdded) {
     Organization org = ReportCreationUtilities.getOrganization(kd);
     if (org == null) {
       logger.info("No Organization from EHR — using fallback custodian Organization");
@@ -579,54 +584,50 @@ public class EcrReportCreator extends ReportCreator {
               : "Unknown Healthcare Organization");
     }
     Reference orgRef = new Reference();
-    String reference = org.fhirType() + "/" + org.getIdElement().getIdPart();
-    orgRef.setReference(reference);
+    orgRef.setReference(org.fhirType() + "/" + org.getIdElement().getIdPart());
     comp.setCustodian(orgRef);
     resTobeAdded.add(org);
+  }
 
-    // Sections
+  private List<SectionComponent> createSections(
+      KarProcessingData kd, Pair<R4FhirData, LaunchDetails> data, Set<Resource> resTobeAdded) {
     List<SectionComponent> scs = new ArrayList<>();
 
-    SectionComponent sc = getSection(SectionTypeEnum.REASON_FOR_VISIT, kd, data);
-    if (sc != null) scs.add(sc);
+    addSectionIfPresent(scs, SectionTypeEnum.REASON_FOR_VISIT, data);
+    addSectionIfPresent(scs, SectionTypeEnum.CHIEF_COMPLAINT, data);
+    addSectionIfPresent(scs, SectionTypeEnum.HISTORY_OF_PRESENT_ILLNESS, data);
+    addSectionIfPresent(scs, SectionTypeEnum.REVIEW_OF_SYSTEMS, data);
 
-    sc = getSection(SectionTypeEnum.CHIEF_COMPLAINT, kd, data);
-    if (sc != null) scs.add(sc);
-
-    sc = getSection(SectionTypeEnum.HISTORY_OF_PRESENT_ILLNESS, kd, data);
-    if (sc != null) scs.add(sc);
-
-    sc = getSection(SectionTypeEnum.REVIEW_OF_SYSTEMS, kd, data);
-    if (sc != null) scs.add(sc);
-
-    sc = getSection(SectionTypeEnum.PROBLEM, kd, data);
+    SectionComponent sc = getSection(SectionTypeEnum.PROBLEM, data);
     if (sc != null) {
       addEntries(null, ResourceType.Condition, kd, sc, resTobeAdded);
+      scs.add(sc);
     }
-    scs.add(sc);
 
-    sc = getSection(SectionTypeEnum.MEDICAL_HISTORY, kd, data);
-    if (sc != null) scs.add(sc);
+    addSectionIfPresent(scs, SectionTypeEnum.MEDICAL_HISTORY, data);
+    addSectionIfPresent(scs, SectionTypeEnum.ADMISSION_MEDICATIONS, data);
 
-    sc = getSection(SectionTypeEnum.ADMISSION_MEDICATIONS, kd, data);
-    if (sc != null) scs.add(sc);
-
-    sc = getSection(SectionTypeEnum.MEDICATION_ADMINISTERED, kd, data);
-    if (sc != null) scs.add(sc);
-    addEntries(null, ResourceType.MedicationAdministration, kd, sc, resTobeAdded);
-
-    sc = getSection(SectionTypeEnum.MEDICATIONS, kd, data);
-    if (sc != null) scs.add(sc);
-    addEntries(null, ResourceType.MedicationStatement, kd, sc, resTobeAdded);
-
-    sc = getSection(SectionTypeEnum.RESULTS, kd, data);
-    if (sc != null) scs.add(sc);
-    addEntries(data.getValue0(), ResourceType.Observation, kd, sc, resTobeAdded);
-    addEntries(null, ResourceType.DiagnosticReport, kd, sc, resTobeAdded);
-
-    sc = getSection(SectionTypeEnum.PLAN_OF_TREATMENT, kd, data);
+    sc = getSection(SectionTypeEnum.MEDICATION_ADMINISTERED, data);
     if (sc != null) {
+      addEntries(null, ResourceType.MedicationAdministration, kd, sc, resTobeAdded);
+      scs.add(sc);
+    }
 
+    sc = getSection(SectionTypeEnum.MEDICATIONS, data);
+    if (sc != null) {
+      addEntries(null, ResourceType.MedicationStatement, kd, sc, resTobeAdded);
+      scs.add(sc);
+    }
+
+    sc = getSection(SectionTypeEnum.RESULTS, data);
+    if (sc != null) {
+      addEntries(data.getValue0(), ResourceType.Observation, kd, sc, resTobeAdded);
+      addEntries(null, ResourceType.DiagnosticReport, kd, sc, resTobeAdded);
+      scs.add(sc);
+    }
+
+    sc = getSection(SectionTypeEnum.PLAN_OF_TREATMENT, data);
+    if (sc != null) {
       addEntries(data.getValue0(), ResourceType.ServiceRequest, kd, sc, resTobeAdded);
       addEntries(data.getValue0(), ResourceType.MedicationRequest, kd, sc, resTobeAdded);
       addEntries(null, ResourceType.DiagnosticReport, kd, sc, resTobeAdded);
@@ -635,7 +636,7 @@ public class EcrReportCreator extends ReportCreator {
       }
     }
 
-    sc = getSection(SectionTypeEnum.IMMUNIZATIONS, kd, data);
+    sc = getSection(SectionTypeEnum.IMMUNIZATIONS, data);
     if (sc != null) {
       addEntries(null, ResourceType.Immunization, kd, sc, resTobeAdded);
       if (sc.hasEntry()) {
@@ -643,7 +644,7 @@ public class EcrReportCreator extends ReportCreator {
       }
     }
 
-    sc = getSection(SectionTypeEnum.PROCEDURES, kd, data);
+    sc = getSection(SectionTypeEnum.PROCEDURES, data);
     if (sc != null) {
       addEntries(data.getValue0(), ResourceType.Procedure, kd, sc, resTobeAdded);
       if (sc.hasEntry()) {
@@ -651,42 +652,56 @@ public class EcrReportCreator extends ReportCreator {
       }
     }
 
-    sc = getSection(SectionTypeEnum.VITAL_SIGNS, kd, data);
-    if (sc != null) scs.add(sc);
-    addEntries(data.getValue0(), ResourceType.Observation, kd, sc, resTobeAdded);
+    sc = getSection(SectionTypeEnum.VITAL_SIGNS, data);
+    if (sc != null) {
+      addEntries(data.getValue0(), ResourceType.Observation, kd, sc, resTobeAdded);
+      scs.add(sc);
+    }
 
-    sc = getSection(SectionTypeEnum.SOCIAL_HISTORY, kd, data);
-    if (sc != null) scs.add(sc);
-    addEntries(data.getValue0(), ResourceType.Observation, kd, sc, resTobeAdded);
+    sc = getSection(SectionTypeEnum.SOCIAL_HISTORY, data);
+    if (sc != null) {
+      addEntries(data.getValue0(), ResourceType.Observation, kd, sc, resTobeAdded);
+      scs.add(sc);
+    }
 
-    sc = getSection(SectionTypeEnum.PREGNANCY, kd, data);
+    sc = getSection(SectionTypeEnum.PREGNANCY, data);
     if (sc != null) {
       addEntries(data.getValue0(), ResourceType.Observation, kd, sc, resTobeAdded);
       if (sc.hasEntry()) {
         scs.add(sc);
       }
     }
-    sc = getSection(SectionTypeEnum.EMERGENCY_OUTBREAK_SECTION, kd, data);
-    if (sc != null) scs.add(sc);
-    comp.setSection(scs);
 
+    addSectionIfPresent(scs, SectionTypeEnum.EMERGENCY_OUTBREAK_SECTION, data);
+
+    return scs;
+  }
+
+  private void addSectionIfPresent(
+      List<SectionComponent> scs, SectionTypeEnum type, Pair<R4FhirData, LaunchDetails> data) {
+    SectionComponent sc = getSection(type, data);
+    if (sc != null) {
+      scs.add(sc);
+    }
+  }
+
+  private void populateSectionNarratives(List<SectionComponent> scs) {
     for (SectionComponent scomp : scs) {
-      boolean hasText = scomp.getText() != null && scomp.getText().getDiv() != null;
-      boolean hasEntries = scomp.getEntry() != null && !scomp.getEntry().isEmpty();
-      boolean hasSections = scomp.getSection() != null && !scomp.getSection().isEmpty();
-
-      if (!hasEntries) {
+      if (sectionHasNoEntries(scomp)) {
         addEmptyNarrative(scomp);
       }
     }
+  }
 
-    // Locations
+  private boolean sectionHasNoEntries(SectionComponent scomp) {
+    return scomp.getEntry() == null || scomp.getEntry().isEmpty();
+  }
+
+  private void addLocationResources(KarProcessingData kd, Set<Resource> resTobeAdded) {
     Set<Resource> locs = kd.getResourcesByType(ResourceType.Location);
     if (locs != null && !locs.isEmpty()) {
       resTobeAdded.addAll(locs);
     }
-
-    return comp;
   }
 
   public List<Practitioner> addAuthors(KarProcessingData kd, Composition comp) {
@@ -707,13 +722,12 @@ public class EcrReportCreator extends ReportCreator {
     return authors;
   }
 
-  public SectionComponent getSection(
-      SectionTypeEnum st, KarProcessingData kd, Pair<R4FhirData, LaunchDetails> data) {
-    return getSectionComponent(st, kd, data);
+  public SectionComponent getSection(SectionTypeEnum st, Pair<R4FhirData, LaunchDetails> data) {
+    return getSectionComponent(st, data);
   }
 
   public SectionComponent getSectionComponent(
-      SectionTypeEnum st, KarProcessingData kd, Pair<R4FhirData, LaunchDetails> data) {
+      SectionTypeEnum st, Pair<R4FhirData, LaunchDetails> data) {
 
     SectionComponent sc = null;
 
@@ -724,7 +738,7 @@ public class EcrReportCreator extends ReportCreator {
                 FhirGeneratorConstants.LOINC_CS_URL,
                 FhirGeneratorConstants.REASON_FOR_VISIT_CODE,
                 FhirGeneratorConstants.REASON_FOR_VISIT_CODE_DISPLAY);
-        populateReasonForVisitNarrative(sc, kd, data);
+        populateReasonForVisitNarrative(sc, data);
         break;
 
       case CHIEF_COMPLAINT:
@@ -733,7 +747,7 @@ public class EcrReportCreator extends ReportCreator {
                 FhirGeneratorConstants.LOINC_CS_URL,
                 FhirGeneratorConstants.CHIEF_COMPLAINT_SECTION_LOINC_CODE,
                 FhirGeneratorConstants.CHIEF_COMPLAINT_SECTION_LOINC_CODE_DISPLAY);
-        populateChiefComplaintNarrative(sc, kd, data);
+        populateChiefComplaintNarrative(sc);
         break;
 
       case HISTORY_OF_PRESENT_ILLNESS:
@@ -742,7 +756,7 @@ public class EcrReportCreator extends ReportCreator {
                 FhirGeneratorConstants.LOINC_CS_URL,
                 FhirGeneratorConstants.HISTORY_OF_PRESENT_ILLNESS_SECTION_LOINC_CODE,
                 FhirGeneratorConstants.HISTORY_OF_PRESENT_ILLNESS_SECTION_LOINC_CODE_DISPLAY);
-        populateDefaultNarrative(sc, kd);
+        populateDefaultNarrative(sc);
         break;
 
       case REVIEW_OF_SYSTEMS:
@@ -751,7 +765,7 @@ public class EcrReportCreator extends ReportCreator {
                 FhirGeneratorConstants.LOINC_CS_URL,
                 FhirGeneratorConstants.REVIEW_OF_SYSTEMS_SECTION_LOINC_CODE,
                 FhirGeneratorConstants.REVIEW_OF_SYSTEMS_SECTION_LOINC_CODE_DISPLAY);
-        populateDefaultNarrative(sc, kd);
+        populateDefaultNarrative(sc);
         break;
 
       case PROBLEM:
@@ -769,7 +783,7 @@ public class EcrReportCreator extends ReportCreator {
                 FhirGeneratorConstants.LOINC_CS_URL,
                 FhirGeneratorConstants.PAST_MEDICAL_HISTORY_SECTION_LOINC_CODE,
                 FhirGeneratorConstants.PAST_MEDICAL_HISTORY_SECTION_LOINC_CODE_DISPLAY);
-        populateDefaultNarrative(sc, kd);
+        populateDefaultNarrative(sc);
         break;
 
       case MEDICATION_ADMINISTERED:
@@ -865,7 +879,7 @@ public class EcrReportCreator extends ReportCreator {
                 FhirGeneratorConstants.LOINC_CS_URL,
                 FhirGeneratorConstants.EMERGENCY_OUTBREAK_SECTION_LOINC_CODE,
                 FhirGeneratorConstants.EMERGENCY_OUTBREAK_SECTION_LOINC_CODE_DISPLAY);
-        populateDefaultNarrative(sc, kd);
+        populateDefaultNarrative(sc);
         break;
 
       default:
@@ -916,7 +930,7 @@ public class EcrReportCreator extends ReportCreator {
   }
 
   public void populateReasonForVisitNarrative(
-      SectionComponent sc, KarProcessingData kd, Pair<R4FhirData, LaunchDetails> data) {
+      SectionComponent sc, Pair<R4FhirData, LaunchDetails> data) {
     logger.info("Creating Reason for Visit Narrative ");
     Narrative val = new Narrative();
     val.setStatus(NarrativeStatus.ADDITIONAL);
@@ -935,8 +949,7 @@ public class EcrReportCreator extends ReportCreator {
     sc.setText(val);
   }
 
-  public void populateChiefComplaintNarrative(
-      SectionComponent sc, KarProcessingData kd, Pair<R4FhirData, LaunchDetails> data) {
+  public void populateChiefComplaintNarrative(SectionComponent sc) {
     logger.info("Creating Chief Complaint Narrative ");
 
     Narrative val = new Narrative();
@@ -946,7 +959,7 @@ public class EcrReportCreator extends ReportCreator {
     sc.setText(val);
   }
 
-  public void populateDefaultNarrative(SectionComponent sc, KarProcessingData kd) {
+  public void populateDefaultNarrative(SectionComponent sc) {
     logger.info("Adding Narrative ");
 
     Narrative val = new Narrative();
@@ -956,18 +969,14 @@ public class EcrReportCreator extends ReportCreator {
     sc.setText(val);
   }
 
-  public void populateTextNarrative(
-      SectionComponent sc, KarProcessingData kd, Set<Resource> resTobeAdded) {
+  public void populateTextNarrative(SectionComponent sc, Set<Resource> resTobeAdded) {
     logger.info("Adding Narrative ");
 
     Narrative val = new Narrative();
     val.setStatus(NarrativeStatus.ADDITIONAL);
 
     String resultString =
-        resTobeAdded.stream()
-            .map(dres -> (DomainResource) (dres))
-            .collect(Collectors.toList())
-            .stream()
+        resTobeAdded.stream().map(dres -> (DomainResource) (dres)).toList().stream()
             .filter(tdres -> tdres.hasText())
             .map(strres -> strres.getText().getDivAsString())
             .collect(Collectors.joining(", "));
@@ -1034,8 +1043,7 @@ public class EcrReportCreator extends ReportCreator {
         && Boolean.TRUE.equals(isVitalsSection(sc))) {
       res = filterObservationsByCategory(resourcesByType, ObservationCategory.VITALSIGNS.toCode());
       if (data != null && data.getVitalObs() != null) {
-        List<Resource> resources =
-            data.getVitalObs().stream().map(obs -> (Resource) obs).collect(Collectors.toList());
+        List<Resource> resources = data.getVitalObs().stream().map(obs -> (Resource) obs).toList();
         res.addAll(resources);
       }
       filteredCategory = ObservationCategory.VITALSIGNS;
@@ -1081,7 +1089,7 @@ public class EcrReportCreator extends ReportCreator {
 
       // FIX 11: only build narrative when we actually have resources
       if (!textResources.isEmpty()) {
-        populateTextNarrative(sc, kd, textResources);
+        populateTextNarrative(sc, textResources);
       }
     }
   }
@@ -1189,7 +1197,7 @@ public class EcrReportCreator extends ReportCreator {
       if (mr.hasMedicationCodeableConcept()) {
         mtc = ctcs.getMatchedCode(mr.getMedicationCodeableConcept());
       } else if (mr.hasMedicationReference()) {
-        logger.info(" Address Medication References in future ");
+        logger.info(ADDRESS_MEDICATION_REFERENCES_FUTURE);
       }
 
     } else if (res instanceof MedicationStatement) {
@@ -1198,7 +1206,7 @@ public class EcrReportCreator extends ReportCreator {
       if (ms.hasMedicationCodeableConcept()) {
         mtc = ctcs.getMatchedCode(ms.getMedicationCodeableConcept());
       } else if (ms.hasMedicationReference()) {
-        logger.info(" Address Medication References in future ");
+        logger.info(ADDRESS_MEDICATION_REFERENCES_FUTURE);
       }
 
     } else if (res instanceof MedicationAdministration) {
@@ -1207,7 +1215,7 @@ public class EcrReportCreator extends ReportCreator {
       if (ma.hasMedicationCodeableConcept()) {
         mtc = ctcs.getMatchedCode(ma.getMedicationCodeableConcept());
       } else if (ma.hasMedicationReference()) {
-        logger.info(" Address Medication References in future ");
+        logger.info(ADDRESS_MEDICATION_REFERENCES_FUTURE);
       }
 
     } else if (res instanceof ServiceRequest) {
