@@ -8,7 +8,6 @@ import com.drajer.ecrapp.util.ApplicationUtils;
 import com.drajer.sof.model.LaunchDetails;
 import com.drajer.sof.model.R4FhirData;
 import java.util.*;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.text.StringEscapeUtils;
 import org.hl7.fhir.r4.model.*;
@@ -19,8 +18,8 @@ import org.slf4j.LoggerFactory;
 
 public class CdaResultGenerator {
 
-  private static final List<String> SEE_NOTE_PATTERNS =
-      Arrays.asList("see note", "see notes", "see below", "see comments", "comment");
+  private static final String DIAGNOSTIC_REPORT_CODE = "DiagnosticReport.code";
+  private static final String OBSERVATION_VALUE = "Observation.value";
 
   private CdaResultGenerator() {}
 
@@ -41,11 +40,10 @@ public class CdaResultGenerator {
     Map<DiagnosticReport, List<Observation>> reports =
         getDiagnosticReportsWithObservations(data, allResults, uniqueObservations);
 
-    if ((uniqueObservations != null && !uniqueObservations.isEmpty())
-        || (reports != null && !reports.isEmpty())) {
+    if (!uniqueObservations.isEmpty() || !reports.isEmpty()) {
 
       // create section header
-      createSectionHeader(data, details, hsb, version);
+      createSectionHeader(hsb);
 
       // Used for creating the HTML Header in the text section.
       int rowNum = 1;
@@ -56,9 +54,7 @@ public class CdaResultGenerator {
               uniqueObservations, details, rowNum, resultEntries, data, textEntries, version);
 
       // process diagnostic reports
-      rowNum =
-          processDiagnosticResults(
-              reports, details, rowNum, resultEntries, data, textEntries, version);
+      processDiagnosticResults(reports, details, rowNum, resultEntries, data, textEntries, version);
 
       // complete section
       createSectionEnd(hsb, textEntries, resultEntries);
@@ -91,11 +87,11 @@ public class CdaResultGenerator {
             " Using Observation to create Organizer and Result entry for {}",
             obs.getIdElement().getIdPart());
         // create Table Values
-        getTableValuesForObservationWithComponents(obs, rowNum, textEntries, data);
+        getTableValuesForObservationWithComponents(obs, rowNum, textEntries);
 
         // create one organizer and multiple result observations
         processLabResultsWithComponents(
-            obs, obs.getCode(), details, rowNum, resultEntries, data, textEntries, version);
+            obs, obs.getCode(), details, rowNum, resultEntries, data, version);
 
       } else {
 
@@ -108,7 +104,7 @@ public class CdaResultGenerator {
         getTableValues(obs, rowNum, textEntries, data);
 
         // create Organizer + result observation entry
-        getXmlForLabObservation(obs, obs.getCode(), details, rowNum, resultEntries, data, version);
+        getXmlForLabObservation(obs, details, rowNum, resultEntries, data, version);
       }
 
       rowNum++;
@@ -124,7 +120,6 @@ public class CdaResultGenerator {
       int rowNum,
       StringBuilder resultEntries,
       R4FhirData data,
-      StringBuilder textEntries,
       String version) {
 
     logger.debug(" Generate XML for Lab Results with Components");
@@ -154,9 +149,7 @@ public class CdaResultGenerator {
               details,
               obs.getCode(),
               obs.getValue(),
-              (obs.hasId()
-                  ? obs.getIdElement().getId()
-                  : new String("Component" + Integer.toString(i))),
+              (obs.hasId() ? obs.getIdElement().getId() : "Component" + i),
               obsWithComponents.getEffective(),
               obs.getInterpretation(),
               rowNum,
@@ -183,7 +176,6 @@ public class CdaResultGenerator {
 
   public static void getXmlForLabObservation(
       Observation obs,
-      CodeableConcept cd,
       LaunchDetails details,
       int rowNum,
       StringBuilder resultEntries,
@@ -271,11 +263,11 @@ public class CdaResultGenerator {
     logger.info("Generating Dynamic Data for Organizer ");
     StringBuilder lrEntry = new StringBuilder(200);
     List<String> paths = new ArrayList<>();
-    paths.add("DiagnosticReport.code");
+    paths.add(DIAGNOSTIC_REPORT_CODE);
     Pair<Boolean, String> obsCodeXml = null;
     if (version.contentEquals("CDA_R31")) {
-      obsCodeXml = getObservationCodeXml(details, cd, false, "", paths, version);
-      if (obsCodeXml != null && obsCodeXml.getValue0()) {
+      obsCodeXml = getObservationCodeXml(details, cd, false, "", paths);
+      if (obsCodeXml.getValue0()) {
         lrEntry.append(
             CdaGeneratorUtils.getXmlForTemplateId(
                 CdaGeneratorConstants.LAB_TEST_RESULT_ORGANIZER_TRIGGER_TEMPLATE,
@@ -338,7 +330,7 @@ public class CdaResultGenerator {
 
       // create one organizer and multiple result observations
       processDiagnosticReportWithObservations(
-          rep, observations, details, rowNum, resultEntries, data, textEntries, version);
+          rep, observations, details, rowNum, resultEntries, data, version);
 
       rowNum++;
     }
@@ -353,7 +345,6 @@ public class CdaResultGenerator {
       int rowNum,
       StringBuilder resultEntries,
       R4FhirData data,
-      StringBuilder textEntries,
       String version) {
 
     logger.info(" Starting to create organizers and entries ");
@@ -383,9 +374,7 @@ public class CdaResultGenerator {
               details,
               obs.getCode(),
               obs.getValue(),
-              (obs.hasId()
-                  ? obs.getIdElement().getIdPart()
-                  : new String("Component" + Integer.toString(i))),
+              (obs.hasId() ? obs.getIdElement().getIdPart() : "Component" + i),
               obs.getEffective(),
               obs.getInterpretation(),
               rowNum,
@@ -440,11 +429,11 @@ public class CdaResultGenerator {
                               s.getIdElement()
                                   .getIdPart()
                                   .contentEquals(r.getReferenceElement().getIdPart()))
-                      .collect(Collectors.toList()));
+                      .toList());
             }
           }
 
-          if (obs != null && !obs.isEmpty()) {
+          if (!obs.isEmpty()) {
 
             obs.forEach(e -> uniqueObservations.remove(e.getIdElement().getIdPart()));
             reports.put(dr, obs);
@@ -469,8 +458,7 @@ public class CdaResultGenerator {
     return reports;
   }
 
-  public static void createSectionHeader(
-      R4FhirData data, LaunchDetails details, StringBuilder hsb, String version) {
+  public static void createSectionHeader(StringBuilder hsb) {
 
     hsb.append(CdaGeneratorUtils.getXmlForStartElement(CdaGeneratorConstants.COMP_EL_NAME));
     hsb.append(CdaGeneratorUtils.getXmlForStartElement(CdaGeneratorConstants.SECTION_EL_NAME));
@@ -531,6 +519,42 @@ public class CdaResultGenerator {
     return null;
   }
 
+  /**
+   * Gets appropriate CodeableConcept from component or falls back to report code.
+   *
+   * @param component the component to check
+   * @param fallbackCode the fallback code from report
+   * @return the selected CodeableConcept
+   */
+  private static CodeableConcept getCodeFromComponentOrFallback(
+      ObservationComponentComponent component, CodeableConcept fallbackCode) {
+    if (component.hasCode()
+        && component.getCode().hasCoding()
+        && CdaFhirUtilities.isCodingPresentForCodeSystem(
+            component.getCode().getCoding(), CdaGeneratorConstants.FHIR_LOINC_URL)) {
+      return component.getCode();
+    }
+    return fallbackCode;
+  }
+
+  /**
+   * Gets appropriate CodeableConcept from observation or falls back to report code.
+   *
+   * @param obs the observation to check
+   * @param fallbackCode the fallback code from report
+   * @return the selected CodeableConcept
+   */
+  private static CodeableConcept getCodeFromObsOrFallback(
+      Observation obs, CodeableConcept fallbackCode) {
+    if (obs.hasCode()
+        && obs.getCode().hasCoding()
+        && CdaFhirUtilities.isCodingPresentForCodeSystem(
+            obs.getCode().getCoding(), CdaGeneratorConstants.FHIR_LOINC_URL)) {
+      return obs.getCode();
+    }
+    return fallbackCode;
+  }
+
   public static String getXmlForComponents(
       DiagnosticReport rep,
       HashMap<String, Observation> allObs,
@@ -545,12 +569,9 @@ public class CdaResultGenerator {
     String contentRef = contentId + Integer.toString(row);
 
     Boolean foundComponent = false;
-
     List<Reference> refs = rep.getResult();
 
     for (Reference r : refs) {
-
-      // Create an Observation for each entry.
       Observation obs = allObs.get(r.getReferenceElement().getIdPart());
 
       if (obs != null
@@ -567,28 +588,13 @@ public class CdaResultGenerator {
         int rowNum = 1;
 
         for (ObservationComponentComponent oc : obs.getComponent()) {
-
           logger.debug("Found Observation Components ");
-          if (oc.hasCode()
-              && oc.getCode().hasCoding()
-              && CdaFhirUtilities.isCodingPresentForCodeSystem(
-                  oc.getCode().getCoding(), CdaGeneratorConstants.FHIR_LOINC_URL)) {
-            cc = oc.getCode();
-          } else {
-            // use diagnostic report code instead
-            cc = rep.getCode();
-          }
+          cc = getCodeFromComponentOrFallback(oc, rep.getCode());
 
-          if (oc.getValue() != null) {
-            val = oc.getValue();
-          }
+          if (oc.getValue() != null) val = oc.getValue();
+          if (oc.getInterpretation() != null) interpretation = oc.getInterpretation();
 
-          if (oc.getInterpretation() != null) {
-            interpretation = oc.getInterpretation();
-          }
-
-          id.append("-");
-          id.append(Integer.toBinaryString(rowNum));
+          id.append("-").append(Integer.toBinaryString(rowNum));
 
           String compString =
               getXmlForObservationComponent(
@@ -606,26 +612,14 @@ public class CdaResultGenerator {
                   obs.getReferenceRange());
 
           if (!compString.isEmpty() && Boolean.FALSE.equals(foundComponent)) foundComponent = true;
-
           lrEntry.append(compString);
-
           rowNum++;
         }
       }
 
       if (obs != null && Boolean.FALSE.equals(foundComponent)) {
-
-        CodeableConcept cc = null;
         logger.info("No component found , so directly adding the observation code ");
-        if (obs.hasCode()
-            && obs.getCode().hasCoding()
-            && CdaFhirUtilities.isCodingPresentForCodeSystem(
-                obs.getCode().getCoding(), CdaGeneratorConstants.FHIR_LOINC_URL)) {
-          cc = obs.getCode();
-        } else {
-          // use diagnostic report code instead
-          cc = rep.getCode();
-        }
+        CodeableConcept cc = getCodeFromObsOrFallback(obs, rep.getCode());
 
         lrEntry.append(
             getXmlForObservationComponent(
@@ -644,8 +638,9 @@ public class CdaResultGenerator {
       }
     }
 
-    logger.debug("Lr Entry = {}", StringEscapeUtils.escapeXml11(lrEntry.toString()));
-
+    if (logger.isDebugEnabled()) {
+      logger.debug("Lr Entry = {}", StringEscapeUtils.escapeXml11(lrEntry.toString()));
+    }
     return lrEntry.toString();
   }
 
@@ -681,36 +676,31 @@ public class CdaResultGenerator {
 
     List<String> paths = new ArrayList<>();
     paths.add("Observation.code");
-    paths.add("DiagnosticReport.code");
-    paths.add("Observation.value");
+    paths.add(DIAGNOSTIC_REPORT_CODE);
+    paths.add(OBSERVATION_VALUE);
 
     String contentRef =
         CdaGeneratorConstants.LABTEST_TABLE_COL_1_BODY_CONTENT + Integer.toString(rowNum);
-    Pair<Boolean, String> obsCodeXml =
-        getObservationCodeXml(details, cd, false, contentRef, paths, version);
+    Pair<Boolean, String> obsCodeXml = getObservationCodeXml(details, cd, false, contentRef, paths);
 
     Pair<Boolean, String> obsValueXml = null;
     contentRef = CdaGeneratorConstants.LABTEST_TABLE_COL_2_BODY_CONTENT + Integer.toString(rowNum);
     if (val instanceof CodeableConcept) {
       paths.clear();
-      paths.add("Observation.value");
+      paths.add(OBSERVATION_VALUE);
       CodeableConcept value = (CodeableConcept) val;
-      obsValueXml = getObservationCodeXml(details, value, true, contentRef, paths, version);
+      obsValueXml = getObservationCodeXml(details, value, true, contentRef, paths);
     }
 
-    if ((obsCodeXml != null && obsCodeXml.getValue0())
-        || (obsValueXml != null && obsValueXml.getValue0())) {
+    if (obsCodeXml.getValue0() || (obsValueXml != null && obsValueXml.getValue0())) {
 
       lrEntry.append(getTriggerCodeTemplateXml(version));
     }
 
     lrEntry.append(CdaGeneratorUtils.getXmlForII(details.getAssigningAuthorityId(), id));
 
-    if (obsCodeXml != null) {
-      lrEntry.append(obsCodeXml.getValue1());
-    } else {
-      logger.warn("Unable to add code as the xml is null");
-    }
+    // Always append the code XML regardless of match status
+    lrEntry.append(obsCodeXml.getValue1());
 
     lrEntry.append(
         CdaGeneratorUtils.getXmlForCD(
@@ -753,7 +743,9 @@ public class CdaResultGenerator {
     lrEntry.append(CdaGeneratorUtils.getXmlForEndElement(CdaGeneratorConstants.OBS_ACT_EL_NAME));
     lrEntry.append(CdaGeneratorUtils.getXmlForEndElement(CdaGeneratorConstants.COMP_EL_NAME));
 
-    logger.debug("Lr Entry = {}", StringEscapeUtils.escapeXml11(lrEntry.toString()));
+    if (logger.isDebugEnabled()) {
+      logger.debug("Lr Entry = {}", StringEscapeUtils.escapeXml11(lrEntry.toString()));
+    }
 
     return lrEntry.toString();
   }
@@ -809,15 +801,14 @@ public class CdaResultGenerator {
 
     List<String> paths = new ArrayList<>();
     paths.add("Observation.code");
-    paths.add("DiagnosticReport.code");
-    paths.add("Observation.value");
+    paths.add(DIAGNOSTIC_REPORT_CODE);
+    paths.add(OBSERVATION_VALUE);
 
-    Pair<Boolean, String> obsCodeXml =
-        getObservationCodeXml(details, cd, false, contentRef, paths, version);
+    Pair<Boolean, String> obsCodeXml = getObservationCodeXml(details, cd, false, contentRef, paths);
 
     Pair<Boolean, String> altObsCodeXml = null;
     if (altCode != null) {
-      altObsCodeXml = getObservationCodeXml(details, altCode, false, contentRef, paths, version);
+      altObsCodeXml = getObservationCodeXml(details, altCode, false, contentRef, paths);
     }
 
     Pair<Boolean, String> obsValueXml = null;
@@ -825,13 +816,12 @@ public class CdaResultGenerator {
     if (val instanceof CodeableConcept) {
 
       paths.clear();
-      paths.add("Observation.value");
+      paths.add(OBSERVATION_VALUE);
       CodeableConcept value = (CodeableConcept) val;
-      obsValueXml = getObservationCodeXml(details, value, true, contentRef, paths, version);
+      obsValueXml = getObservationCodeXml(details, value, true, contentRef, paths);
     }
 
-    if ((obsCodeXml != null && obsCodeXml.getValue0())
-        || (obsValueXml != null && obsValueXml.getValue0())) {
+    if (obsCodeXml.getValue0() || (obsValueXml != null && obsValueXml.getValue0())) {
 
       lrEntry.append(getTriggerCodeTemplateXml(version));
 
@@ -846,13 +836,13 @@ public class CdaResultGenerator {
 
     lrEntry.append(CdaGeneratorUtils.getXmlForII(details.getAssigningAuthorityId(), id));
 
-    if (obsCodeXml != null && obsCodeXml.getValue0()) {
+    if (obsCodeXml.getValue0()) {
       lrEntry.append(obsCodeXml.getValue1());
     } else if (altObsCodeXml != null && altObsCodeXml.getValue0()) {
       lrEntry.append(altObsCodeXml.getValue1());
-    } else if (obsCodeXml != null) {
+    } else if (!obsCodeXml.getValue0()) {
       lrEntry.append(obsCodeXml.getValue1());
-    } else if (altObsCodeXml != null) {
+    } else if (altObsCodeXml != null && !altObsCodeXml.getValue0()) {
       lrEntry.append(altObsCodeXml.getValue1());
     }
 
@@ -906,8 +896,7 @@ public class CdaResultGenerator {
       CodeableConcept code,
       Boolean valElement,
       String contentRef,
-      List<String> paths,
-      String version) {
+      List<String> paths) {
 
     String elementType =
         valElement ? CdaGeneratorConstants.VAL_EL_NAME : CdaGeneratorConstants.CODE_EL_NAME;
@@ -1148,25 +1137,6 @@ public class CdaResultGenerator {
     return CdaFhirUtilities.getCodingXml(null, CdaGeneratorConstants.CODE_EL_NAME, "");
   }
 
-  private static String getNarrativeTextObservationValue(Observation obs) {
-
-    String value = obs.hasValue() ? CdaFhirUtilities.getStringForType(obs.getValue()) : "";
-
-    boolean isSeeNote =
-        StringUtils.isNotBlank(value)
-            && SEE_NOTE_PATTERNS.stream().anyMatch(p -> value.toLowerCase().startsWith(p));
-
-    if (isSeeNote && obs.hasNote()) {
-
-      return obs.getNote().stream()
-          .map(Annotation::getText)
-          .filter(StringUtils::isNotBlank)
-          .collect(Collectors.joining("\n"));
-    }
-
-    return value;
-  }
-
   private static String getReferenceRangeXml(
       List<CodeableConcept> interpretations,
       List<Observation.ObservationReferenceRangeComponent> referenceRange) {
@@ -1335,7 +1305,7 @@ public class CdaResultGenerator {
    * row per component.
    */
   public static void getTableValuesForObservationWithComponents(
-      Observation obs, int rowNum, StringBuilder textEntries, R4FhirData data) {
+      Observation obs, int rowNum, StringBuilder textEntries) {
 
     String panelId = "id_" + obs.getIdElement().getIdPart() + "_ref";
     String panelName = CdaFhirUtilities.getStringForCodeableConcept(obs.getCode());
@@ -1345,7 +1315,6 @@ public class CdaResultGenerator {
 
     int compIndex = 1;
     for (ObservationComponentComponent comp : obs.getComponent()) {
-      String compId = "id_" + obs.getIdElement().getIdPart() + "_comp" + compIndex + "_ref";
       String name = CdaFhirUtilities.getStringForCodeableConcept(comp.getCode());
       String outcome =
           comp.hasValue()
@@ -1393,7 +1362,6 @@ public class CdaResultGenerator {
       int compIndex = 1;
       for (Observation obs : observations) {
 
-        String compId = "id_" + obs.getIdElement().getIdPart() + "_ref";
         String name = CdaFhirUtilities.getStringForCodeableConcept(obs.getCode());
         String outcome =
             obs.hasValue()
